@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Aug-17-2005 patrickh    Removed the unused namespace snx::FileIO and all its
+                        members.
+
 [1.0.0 released - 7.5.2005]====================================================
 Jul-07-2005 patrickh    NEW VERSION: 1.0.0
 Jun-15-2005 patrickh    Updated to support Windows 64-bit edition.
